more comments to benchamarking experiments

--- a/atlas_benchmarks/Test_on_Milo_data.ipynb
+++ b/atlas_benchmarks/Test_on_Milo_data.ipynb
@@ -379,8 +379,7 @@
     "import sys\n",
     "sys.path.append('../../')\n",
     "\n",
-    "from DAISEE import *\n",
-    "#from DAISEE_utils import *"
+    "from DAISEE import *"
    ]
   },
   {
